update resetOptOnBreakpoint(add resetSlider)

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,7 +19,7 @@
         </main>
     </div>
 
-    <script src="js/script.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
