--- a/src/html/index/mlider.html
+++ b/src/html/index/mlider.html
@@ -11,7 +11,7 @@
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_2 ">
-            <div class="slide-mlider__content">aasdasasdasds 2</div>
+            <div class="slide-mlider__content">aadasds 2</div>
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_3 ">
@@ -19,7 +19,7 @@
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_4 ">
-            <div class="slide-mlider__content">sdassasdasdasdadadsa 4</div>
+            <div class="slide-mlider__content">sdasdadsa 4</div>
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_5 ">
@@ -31,7 +31,7 @@
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_7">
-            <div class="slide-mlider__content">7 asdakasdl;dsdd</div>
+            <div class="slide-mlider__content">7 asd;dsdd</div>
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_8">
