--- a/src/html/index/mlider.html
+++ b/src/html/index/mlider.html
@@ -11,15 +11,15 @@
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_2 ">
-            <div class="slide-mlider__content">aadasds 2</div>
+            <div class="slide-mlider__content">aadds 2</div>
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_3 ">
-            <div class="slide-mlider__content">adasda 3</div>
+            <div class="slide-mlider__content">adada 3</div>
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_4 ">
-            <div class="slide-mlider__content">sdasdadsa 4</div>
+            <div class="slide-mlider__content">sdsa 4</div>
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_5 ">
@@ -27,11 +27,11 @@
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_6">
-            <div class="slide-mlider__content">daasdas 6</div>
+            <div class="slide-mlider__content">daaas 6</div>
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_7">
-            <div class="slide-mlider__content">7 asd;dsdd</div>
+            <div class="slide-mlider__content">7 asd;</div>
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_8">
@@ -39,7 +39,7 @@
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_9">
-            <div class="slide-mlider__content">9 asdfnnndsmjad</div>
+            <div class="slide-mlider__content">9 ad</div>
         </div>
 
         <!-- 
