--- a/src/html/index/mlider.html
+++ b/src/html/index/mlider.html
@@ -61,21 +61,21 @@
     <div class="mlider__counter"></div>
 
 </div>
-<!-- 
+
 <div class="mlider" id="mlider-2">
 
     <div class="mlider__wrapper">
 
         <div class="mlider__slide slide-mlider slide-mlider_0">
-            <div class="slide-mlider__content">0 asdas</div>
+            <div class="slide-mlider__content">0 aas</div>
         </div>
 
-        <div class="mlider__slide slide-mlider slide-mlider_1 current">
+        <div class="mlider__slide slide-mlider slide-mlider_1">
             <div class="slide-mlider__content">1 dd</div>
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_2">
-            <div class="slide-mlider__content">aasdasasdasds 2</div>
+            <div class="slide-mlider__content">aasasds 2</div>
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_3">
@@ -83,19 +83,19 @@
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_4">
-            <div class="slide-mlider__content">sdassasdasdasdadadsa 4</div>
+            <div class="slide-mlider__content">sddsa 4</div>
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_5">
-            <div class="slide-mlider__content">5 asdad</div>
+            <div class="slide-mlider__content">5 asd</div>
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_6">
-            <div class="slide-mlider__content">daasdas 6</div>
+            <div class="slide-mlider__content">daass 6</div>
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_7">
-            <div class="slide-mlider__content">7 asdakasdl;dsdd</div>
+            <div class="slide-mlider__content">7 dd</div>
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_8">
@@ -103,7 +103,7 @@
         </div>
 
         <div class="mlider__slide slide-mlider slide-mlider_9">
-            <div class="slide-mlider__content">9 asdfnnndsmjad</div>
+            <div class="slide-mlider__content">9 ad</div>
         </div>
     </div>
 
@@ -118,7 +118,7 @@
 
     <div class="mlider__counter"></div>
 
-</div> -->
+</div>
 
 <!-- <div class="mlider" id="mlider-3">
 
