--- a/src/html/index/mlider.html
+++ b/src/html/index/mlider.html
@@ -62,7 +62,7 @@
 
 </div>
 
-<div class="mlider" id="mlider-2">
+<!-- <div class="mlider" id="mlider-2">
 
     <div class="mlider__wrapper">
 
@@ -119,7 +119,7 @@
 
     <div class="mlider__counter"></div>
 
-</div>
+</div> -->
 
 <!-- <div class="mlider" id="mlider-3">
 
