rebase rectUpdate(one varPoint for each slideLine)

--- a/src/html/index/mlider.html
+++ b/src/html/index/mlider.html
@@ -42,9 +42,12 @@
             <div class="slide-mlider__content">9 ad</div>
         </div>
 
-        <!-- 
-        <div class="mlider__slide slide-mlider slide-mlider_10">
+        <!-- <div class="mlider__slide slide-mlider slide-mlider_10">
             <div class="slide-mlider__content">10 asasdff</div>
+        </div>
+
+        <div class="mlider__slide slide-mlider slide-mlider_11">
+            <div class="slide-mlider__content">11 asff</div>
         </div> -->
 
     </div>
